Bug 693922 - Regression: The SVG device is broken
Summary: Regression: The SVG device is broken
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Other Driver (show other bugs)
Version: master
Hardware: PC All
: P1 normal
Assignee: Henry Stiles
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-18 06:12 UTC by Marcos H. Woehrmann
Modified: 2013-05-22 18:43 UTC (History)
1 user (show)

See Also:
Customer: 580
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marcos H. Woehrmann 2013-04-18 06:12:31 UTC
A customer is interested in using Ghostscript to generate SVG files from PDF and PostScript files, bu the SVG device is broken.

This sample command line:

  bin/gs -sDEVICE=svg -o tiger.svg example/tiger.eps

Results in an SVG file that neither Safari nor Illustrator CS5 can open (Safari reports "error on line 10 at column 10: attributes construct error", Illustrator just says invalid file).  

SVG output worked in Ghostscript 8.64, that version is able to convert tiger.eps to a valid SVG file but Ghostscript 9.00 segfaults.
Comment 1 Henry Stiles 2013-04-18 14:48:23 UTC
I will fix the regression but the svg device is experimental at this stage and probably should not be used in a production setting.  I guess there is about 3 months of engineering work to get the device in a state where we would be satisfied with calling it customer-ready.  Currently the project has background status, meaning we don't work on it regularly.  I think that information should be shared with the customer requesting this fix.
Comment 3 Marcos H. Woehrmann 2013-04-18 15:27:51 UTC
(In reply to comment #1)
> I will fix the regression but the svg device is experimental at this stage
> and probably should not be used in a production setting.  I guess there is
> about 3 months of engineering work to get the device in a state where we
> would be satisfied with calling it customer-ready.  Currently the project
> has background status, meaning we don't work on it regularly.  I think that
> information should be shared with the customer requesting this fix.

Customer has already been notified that the SVG device is not of commercial quality.
Comment 4 Henry Stiles 2013-04-18 17:10:27 UTC
Shelly's fix worked, please thank him Chris.

commit 52d113e470047ea70485de785bc9a3b68731127c
Author: Henry Stiles <henry.stiles@artifex.com>
Date:   Thu Apr 18 11:04:49 2013 -0600

    Fix typo in SVG output device (bug #693922) by Shailesh Mistry.
Comment 5 a.rolek 2013-05-22 18:43:05 UTC
I'm also interested in converting .eps to .svg files. Looking forward to the  final implementation.