Fix typo in SVG output device (bug #693922) by Shailesh Mistry.